--- a/styles/hero.css
+++ b/styles/hero.css
@@ -7,7 +7,7 @@
     content: "";
     position: absolute;
     width: 100%;
-    background-image: url('../images/hero-bg-1.jpg');
+    background-image: url('https://cdn.pixabay.com/photo/2015/11/06/13/25/blog-1027861_640.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center 30%;
