--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #FFF2F2;
+    background-color: #ffffff;
     box-shadow: 0 1px 5px -2px hsl(0, 0%, 13%);
     position: fixed;
     width: 100%;
