--- a/styles/card.css
+++ b/styles/card.css
@@ -21,6 +21,21 @@
     border: 1px solid hsl(233, 8%, 62%);
     overflow: hidden;
     transition: all .25s ease-in-out;
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0%  cover 30%;
+}
+
+@keyframes appear{
+    from{
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px) ;
+    }
+
 }
 
 .card:hover {
