--- a/styles/hero.css
+++ b/styles/hero.css
@@ -7,7 +7,7 @@
     content: "";
     position: absolute;
     width: 100%;
-    background-image: url('https://cdn.pixabay.com/photo/2015/11/06/13/25/blog-1027861_640.jpg');
+    background-image: url('../images/blog.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center 30%;
@@ -21,8 +21,10 @@
 .hero--text h1 {
     font-size: 2.5rem;
     margin-bottom: 2rem;
+    color: #ffffff;
+    text-shadow: 3px 4px 5px #7f0200;
 }
 .hero--text p {
     margin-bottom: 2rem;
-    color: #7886C7;
+    color: #ffffff;
 }
