--- a/styles/post.css
+++ b/styles/post.css
@@ -74,6 +74,10 @@
     margin-left: 1rem;
     cursor: pointer;
 }
+.share img:hover {
+    transform: scale(1.3);
+    transition: all 0.25s ease-in-out;
+}
 .quote {
     padding: 1rem;
     font-size: 1.375rem;
